--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
+    "jquery": "2.1.4",
     "express": "~4.13.1",
     "jade": "~1.11.0",
     "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0"
+  },
+  "devDependencies": {
+    "chance": "0.8.0"
   }
 }
